<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="text_support">Написать в поддержку</string>
    <string name="license_agreement">Пользовательское соглашение</string>
    <string name="course_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="developers_email">justverlink@gmail.com</string>
    <string name="text_support_mail_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text_support_mail_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_problem">Проблемы со связью.\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="refresh">Обновить</string>
    <string name="search_history_header">Вы искали</string>
    <string name="clear_search_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="media_player_default_time">00:00</string>
    <string name="favorites_are_empty_error">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlists_are_empty_error">Вы не создали\nни одного плейлиста</string>
    <string name="favorites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="create">Создать</string>
    <string name="edit_text_title">Название*</string>
    <string name="edit_text_description">Описание</string>
    <string name="finish_playlist_creation">Завершить создание плейлиста?</string>
    <string name="all_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="tracks">треков</string>
    <string name="track_already_added">Трек уже добавлен в плейлист </string>
    <string name="added_to_playlist">Добавлено в плейлист </string>
    <string name="want_to_delete_track">Хотите удалить трек?</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="are_you_sure_you_want_to_delete_playlist">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="delete">Удалить</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="no_tracks_in_playlist">В плейлисте нет треков</string>
    <string name="there_is_no_tracks_in_this_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share">Поделиться</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="edit_information">Редактировать информацию</string>
    <plurals name="numberOfSongs">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="numberOfMinutes">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>