<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".settings.ui.fragment.SettingsFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ToolbarTextStyle"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        android:text="@string/settings"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginEnd="@dimen/padding"
        android:orientation="vertical">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/theme_switcher"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:text="@string/dark_theme"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/default_text_size"
            android:fontFamily="@font/ys_display_regular">
        </com.google.android.material.switchmaterial.SwitchMaterial>

        <TextView
            android:id="@+id/share_app_button"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            style="@style/SettingsScreenTextStyle"
            android:text="@string/share_app"
            app:drawableEndCompat="@drawable/ic_share">
        </TextView>

        <TextView
            android:id="@+id/text_support_button"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            style="@style/SettingsScreenTextStyle"
            android:text="@string/text_support"
            app:drawableEndCompat="@drawable/ic_support">
        </TextView>

        <TextView
            android:id="@+id/license_agreement_button"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            style="@style/SettingsScreenTextStyle"
            android:text="@string/license_agreement"
            app:drawableEndCompat="@drawable/ic_arrow_right">
        </TextView>

    </LinearLayout>

</LinearLayout>