<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/MainScreenBackgroundStyle"
    android:padding="@dimen/padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/main_screen_text_size"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="@color/PM_white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/main_screen_search_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/MainScreenButtonStyle"
            android:text="@string/search"
            app:icon="@drawable/ic_lens"
            app:iconGravity="textStart"
            app:iconTint="@color/PM_black"/>

        <Button
            android:id="@+id/main_screen_media_library_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/MainScreenButtonStyle"
            android:text="@string/media_library"
            app:icon="@drawable/ic_media_library"
            app:iconGravity="textStart"
            app:iconTint="@color/PM_black"/>

        <Button
            android:id="@+id/main_screen_settings_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/MainScreenButtonStyle"
            android:text="@string/settings"
            app:icon="@drawable/ic_cogwheel"
            app:iconGravity="textStart"
            app:iconTint="@color/PM_black"/>

        </LinearLayout>

</LinearLayout>