<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/backgroundColor"
    tools:context=".player.ui.fragment.PlayerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:navigationIconTint="?attr/colorPrimary"
            app:titleTextAppearance="@style/ToolbarTextStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="56dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/left_border"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="24dp"/>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/right_border"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="24dp"/>

                <ImageView
                    android:id="@+id/cover"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="1:1"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="@id/left_border"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/right_border"/>

                <TextView
                    android:id="@+id/track_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="22sp"
                    android:fontFamily="@font/ys_display_medium"
                    app:layout_constraintStart_toStartOf="@id/left_border"
                    app:layout_constraintTop_toBottomOf="@id/cover"/>

                <TextView
                    android:id="@+id/artist_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="14sp"
                    android:fontFamily="@font/ys_display_medium"
                    app:layout_constraintStart_toStartOf="@id/track_name"
                    app:layout_constraintTop_toBottomOf="@id/track_name"/>

                <ImageButton
                    android:id="@+id/add_to_playlist_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:src="@drawable/add_to_playlist_button"
                    app:layout_constraintStart_toStartOf="@id/left_border"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintTop_toTopOf="@id/play_button"
                    app:layout_constraintBottom_toBottomOf="@id/play_button"
                    app:layout_constraintEnd_toStartOf="@id/play_button"/>

                <ImageButton
                    android:id="@+id/play_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="54dp"
                    android:background="@null"
                    android:src="@drawable/play_button"
                    app:layout_constraintStart_toEndOf="@id/add_to_playlist_button"
                    app:layout_constraintTop_toTopOf="@id/artist_name"
                    app:layout_constraintEnd_toStartOf="@id/add_to_favorites_button"/>

                <ImageButton
                    android:id="@+id/add_to_favorites_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:src="@drawable/add_to_favorites_button_unpressed"
                    app:layout_constraintStart_toEndOf="@id/play_button"
                    app:layout_constraintTop_toTopOf="@id/play_button"
                    app:layout_constraintBottom_toBottomOf="@id/play_button"
                    app:layout_constraintEnd_toEndOf="@id/right_border"/>

                <TextView
                    android:id="@+id/track_time_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textColor="?attr/colorPrimary"
                    app:layout_constraintStart_toStartOf="@id/left_border"
                    app:layout_constraintEnd_toEndOf="@id/right_border"
                    app:layout_constraintTop_toBottomOf="@id/play_button"/>

                <TextView
                    android:id="@+id/duration_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/duration"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/play_button"
                    style="@style/TrackParameters"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/duration_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="@id/duration_word"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/TextBlackWhite13sp"
                    android:visibility="gone"/>

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/duration_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="duration_word, duration_time"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/album_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/album"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/duration_word"
                    style="@style/TrackParameters"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/album"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="@id/album_word"
                    app:layout_constraintStart_toStartOf="@+id/play_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:gravity="end"
                    style="@style/TextBlackWhite13sp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:visibility="gone"/>

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/album_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="album_word, album"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/year_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/year"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/album_word"
                    style="@style/TrackParameters"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="@id/year_word"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/TextBlackWhite13sp"
                    android:visibility="gone"/>

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/year_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="year_word, year"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/genre_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/genre"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/year_word"
                    style="@style/TrackParameters"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="@id/genre_word"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/TextBlackWhite13sp"
                    android:visibility="gone"/>

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/genre_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="genre_word, genre"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/country_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/country"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/genre_word"
                    style="@style/TrackParameters"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="@id/country_word"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/TextBlackWhite13sp"
                    android:visibility="gone"/>

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/country_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="country_word, country"
                    android:visibility="gone"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:background="@drawable/rounded_top_16dp"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <View
        android:layout_width="50dp"
        android:layout_height="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bottom_sheet_handle"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/add_to_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/add_to_playlist"
        android:textSize="19sp"
        android:textColor="?attr/colorPrimary"
        android:fontFamily="@font/ys_display_medium"/>

        <Button
            android:id="@+id/new_playlist_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_button_54dp"
            android:text="@string/new_playlist"
            android:textAllCaps="false"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="14sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>